--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,17 @@
     </android.support.v4.view.ViewPager>
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_gravity="bottom"
+        android:layout_gravity="bottom|center"
         android:padding="16dp"
         android:layout_marginBottom="50dp"
         tools:text="photo description"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/rounded_corner"/>
     <com.rd.PageIndicatorView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
